infra/k8s/comments-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: comments-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: comments

  template:
    metadata:
      labels:
        app: comments

    spec:
      containers:
        - name: comments
          image: callipygious/microblog-comments:latest
