infra/k8s/event-bus-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: event-bus-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: event-bus

  template:
    metadata:
      labels:
        app: event-bus

    spec:
      containers:
        - name: event-bus
          image: callipygious/microblog-event-bus:latest
