infra/k8s/moderation-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: moderation-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: moderation

  template:
    metadata:
      labels:
        app: moderation

    spec:
      containers:
        - name: moderation
          image: callipygious/microblog-moderation:latest
