infra/k8s/posts-depl.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: posts-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: posts

  template:
    metadata:
      labels:
        app: posts

    spec:
      containers:
        - name: posts
          image: callipygious/microblog-posts:latest
