infra/k8s/query-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: query-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: query

  template:
    metadata:
      labels:
        app: query

    spec:
      containers:
        - name: query
          image: callipygious/microblog-query:latest
