infra/k8s/client-cluster-ip.yaml
apiVersion: v1

kind: Service

metadata:
  name: client-service

spec:
  selector:
    app: client

  ports:
    - name: client
      protocol: TCP
      port: 3000
