infra/k8s/comments-cluster-ip.yaml
apiVersion: v1

kind: Service

metadata:
  name: comments-service

spec:
  selector:
    app: comments

  ports:
    - name: comments
      protocol: TCP
      port: 3002
