infra/k8s/event-bus-cluster-ip.yaml
apiVersion: v1

kind: Service

metadata:
  name: event-bus-service

spec:
  selector:
    app: event-bus

  ports:
    - name: event-bus
      protocol: TCP
      port: 3004
