infra/k8s/moderation-cluster-ip.yaml
apiVersion: v1

kind: Service

metadata:
  name: moderation-service

spec:
  selector:
    app: moderation

  ports:
    - name: moderation
      protocol: TCP
      port: 3005
