infra/k8s/posts-cluster-ip.yaml
apiVersion: v1

kind: Service

metadata:
  name: posts-cluster-ip

spec:
  selector:
    app: posts

  ports:
    - name: posts
      protocol: TCP
      port: 3001
