infra/k8s/posts-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: posts-service

spec:
  type: NodePort

  selector:
    app: posts

  ports:
    - port: 3001
      name: posts
      protocol: TCP
