infra/k8s/query-cluster-ip.yaml
apiVersion: v1

kind: Service

metadata:
  name: query-service

spec:
  selector:
    app: query

  ports:
    - name: query
      protocol: TCP
      port: 3003
