infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress

metadata:
  name: ingress-service

  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/use-regex: 'true'

spec:
  rules:
    - http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-cluster-ip
              servicePort: 3001

          - path: /posts
            backend:
              serviceName: query-service
              servicePort: 3003

          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-service
              servicePort: 3002

          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
